tests/compile_fail/derive_not_enum.rs
#[derive(ktstr::Scheduler)]
#[scheduler(name = "bad")]
struct NotAnEnum;

fn main() {}
