tests/compile_fail/derive_not_enum.stderr
error: Scheduler can only be derived for enums
 --> tests/compile_fail/derive_not_enum.rs:3:8
  |
3 | struct NotAnEnum;
  |        ^^^^^^^^^
